# warehouse

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Makefile  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  setup.cfg
backend/config/: __init__.py  urls.py
backend/config/persistence/: settings.py
backend/docker/: test.env  uwsgi.ini
backend/docker/deployment/: Dockerfile
backend/docker/deployment/base/: Dockerfile
backend/docker/development/: Dockerfile
backend/docker/development/base/: Dockerfile
backend/src/: app.py
backend/src/application/use_case/: calculate_products_availability_service.py  update_inventory_service.py
backend/src/domain/model/: article_inventory.py  canonical_article.py  canonical_product.py  product.py
backend/src/domain/model/repository/: article_inventory_reader_repository.py  article_inventory_writer_repository.py  canonical_product_reader_repository.py
backend/src/infrastructure/controller/: __init__.py  base.py  healthcheck_controller.py
backend/src/infrastructure/controller/products/: controller.py
backend/src/infrastructure/persistence/inmemory/model/: __init__.py
backend/src/infrastructure/persistence/inmemory/repository/: inmemory_article_inventory_reader_repository.py  inmemory_canonical_product_reader_repository.py  inventory_article_inventory_writer_repository.py
backend/tests/application/: test_calculate_products_availability_service.py
backend/tests/infrastructure/controller/products/: test_controller.py
frontend/: README.md  package-lock.json
(+10 files in other folders)
