[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sergio Perez <serpear@gmail..com>"]

[tool.poetry.dependencies]
python = "^3.9"
uWSGI = "^2.0.19"
Flask = "^1.1.2"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
