[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sergio Perez <sperez4mba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uWSGI = "^2.0.19"
Flask = "^1.1.2"
flask-restx = "^0.2.0"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
nose = "^1.3.7"
flask-shell-bpython = "^1.0.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
